[gd_scene load_steps=21 format=3 uid="uid://bho6ewcjsvxhh"]

[ext_resource type="Script" path="res://scripts/sfx_player.gd" id="1_d1ef4"]
[ext_resource type="AudioStream" uid="uid://nr2yj4spnasc" path="res://assets/sounds/ui/button_press.mp3" id="2_2ay3r"]
[ext_resource type="AudioStream" uid="uid://b4es2ctjhy1yx" path="res://assets/sounds/ui/money_counter.mp3" id="3_22ea8"]
[ext_resource type="AudioStream" uid="uid://djq00e0o0r0lc" path="res://assets/sounds/ui/show_result.mp3" id="4_k2skw"]
[ext_resource type="AudioStream" uid="uid://byffqm2ltie3v" path="res://assets/sounds/ui/countdown.mp3" id="5_2p06t"]
[ext_resource type="AudioStream" uid="uid://bv5ijiqm1m2bf" path="res://assets/sounds/ui/countdown_go.mp3" id="6_eek0h"]
[ext_resource type="AudioStream" uid="uid://bjed3a8q85jf6" path="res://assets/sounds/ui/heartbeat.mp3" id="7_fhes2"]
[ext_resource type="AudioStream" uid="uid://bsfulxad8nch6" path="res://assets/sounds/bgm/every_step_silent_partner.mp3" id="8_fdlaw"]
[ext_resource type="AudioStream" uid="uid://cdu1r0gkw2p07" path="res://assets/sounds/bgm/sunday_drive_silent_partner.mp3" id="9_7mf8s"]
[ext_resource type="AudioStream" uid="uid://b05w4xyrllvte" path="res://assets/sounds/bgm/shadowing_corbyn_kites.mp3" id="10_s6bhn"]
[ext_resource type="AudioStream" uid="uid://bmagokkpewset" path="res://assets/sounds/platforming_player/character_move.mp3" id="11_jpcg1"]
[ext_resource type="AudioStream" uid="uid://clrhacvht4cbl" path="res://assets/sounds/ui/correct_observation.mp3" id="12_phbsu"]
[ext_resource type="AudioStream" uid="uid://cdgp6xro60wj" path="res://assets/sounds/ui/correct_memory.mp3" id="13_dqp75"]
[ext_resource type="AudioStream" uid="uid://bjs8upcv8l8l3" path="res://assets/sounds/ui/lucky.mp3" id="14_ecgh1"]
[ext_resource type="AudioStream" uid="uid://dpe2jnsapgo0l" path="res://assets/sounds/board/board_positive.mp3" id="15_t6xi3"]
[ext_resource type="AudioStream" uid="uid://b7u0rt1q1qhla" path="res://assets/sounds/board/board_negative.mp3" id="16_30d0g"]
[ext_resource type="AudioStream" uid="uid://cpxc0x4iu6knd" path="res://assets/sounds/bgm/called_upon_silent_partner.mp3" id="17_tlpi5"]
[ext_resource type="AudioStream" uid="uid://ny8bdsqblxve" path="res://assets/sounds/bgm/orbit_corbyn_kites.mp3" id="18_p5v5h"]
[ext_resource type="AudioStream" uid="uid://b8n4o460xavvt" path="res://assets/sounds/bgm/clean_living_everet_almond.mp3" id="19_pkj54"]
[ext_resource type="AudioStream" uid="uid://vn4cn08vi86x" path="res://assets/sounds/bgm/icelandic_arpeggios_DivKid.mp3" id="20_nw4yo"]

[node name="SFXPlayer" type="Node2D"]
script = ExtResource("1_d1ef4")

[node name="ButtonPress" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_2ay3r")
bus = &"SFX"

[node name="MoneyCounter" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_22ea8")
volume_db = 24.0
bus = &"New Bus"

[node name="ShowResult" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_k2skw")
bus = &"SFX"

[node name="Countdown" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_2p06t")
volume_db = -10.0
bus = &"SFX"

[node name="CountdownGo" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_eek0h")
volume_db = -10.0
bus = &"SFX"

[node name="Heartbeat" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_fhes2")
bus = &"SFX"

[node name="EveryStep" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_fdlaw")
bus = &"BGM"

[node name="SundayDrive" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_7mf8s")
volume_db = -5.0
bus = &"BGM"

[node name="Shadowing" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_s6bhn")
bus = &"BGM"

[node name="CharacterMove" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_jpcg1")
volume_db = 2.0
bus = &"SFX"

[node name="CorrectObservation" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_phbsu")
bus = &"SFX"

[node name="CorrectMemory" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_dqp75")
bus = &"SFX"

[node name="Lucky" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_ecgh1")
volume_db = -6.0
bus = &"SFX"

[node name="BoardPositive" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_t6xi3")
bus = &"SFX"

[node name="BoardNegative" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("16_30d0g")
bus = &"SFX"

[node name="BoardMove" type="AudioStreamPlayer2D" parent="."]
bus = &"SFX"

[node name="DiceRoll" type="AudioStreamPlayer2D" parent="."]
bus = &"SFX"

[node name="CalledUpon" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("17_tlpi5")
bus = &"BGM"

[node name="Orbit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("18_p5v5h")
bus = &"BGM"

[node name="CleanLiving" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("19_pkj54")
bus = &"BGM"

[node name="IcelandicArpeggios" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("20_nw4yo")
bus = &"BGM"
